[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/status_panel.gd" id="1"]

[node name="StatusPanel" type="PanelContainer"]
offset_left = 32.0
offset_top = 96.0
offset_right = 160.0
offset_bottom = 640.0
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TempLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "温度"
horizontal_alignment = 1

[node name="TempGauge" type="ProgressBar" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 0.5
fill_mode = 3
show_percentage = false

[node name="TempZoneLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "適温"
horizontal_alignment = 1

[node name="CharcoalLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "炭: 3"
horizontal_alignment = 1
